# chrome-server

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.brave  Dockerfile.headless_shell  Dockerfile.headless_shell_playwright  Dockerfile.lightpanda  Dockerfile.playwright  Dockerfile.xvfb  LICENSE  README.md  build-base.sh  build.rs  build.sh  docker-entrypoint-xvfb.sh  docker-entrypoint.sh
.github/workflows/: benches.yml  rust.yml
benches/: .dockerignore  Cargo.toml  NOTES.md  README.md  basic.rs  basic_no_args.rs  run.rs  run_concurrent.rs  utils.rs
benches/logs/: Darwin_v10cpu_benchmark_logs.txt  Darwin_v10cpu_benchmark_noargs_logs.txt  Linux_v4cpu_benchmark_logs.txt  Linux_v4cpu_benchmark_noargs_logs.txt
benches/logs_concurrent/: Darwin_v10cpu_benchmark_logs.txt  Darwin_v10cpu_benchmark_noargs_logs.txt
docker/: Dockerfile  Dockerfile.brave  Dockerfile.headless_shell  Dockerfile.headless_shell_playwright  Dockerfile.lightpanda  Dockerfile.playwright  Dockerfile.xvfb
headless_browser/: Cargo.toml  README.md
headless_browser/src/: main.rs
headless_browser/tests/: cdp.rs
headless_browser_lib/: Cargo.toml  LOAD_BALANCER_DOCS.md  README.md
headless_browser_lib/src/: conf.rs  lib.rs  modify.rs  proxy.rs  render_conf.rs
scripts/: build-headless-shell.sh  build-image.sh  build-unpatched.sh  cleanup.sh  docker-entrypoint-xvfb.sh
src/: conf.rs  main.rs  modify.rs  proxy.rs
