[package]
name = "chrome_server"
version = "0.2.12"
edition = "2021"
authors = [
    "j-mendez <jeff@spider.cloud>"
]
description = "Chrome proxy API to manage chrome in Cloud Providers"
license = "MIT"
repository = "https://github.com/spider-rs/chrome-server"
documentation = "https://docs.rs/chrome_server"
categories = ["web-programming", "command-line-utilities"]

[dependencies]
hyper = "0.14"
lazy_static = "1"
reqwest = { version = "0.12" }
string_concat = "0.0.1"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros", "net"] }
warp = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
bytes = "1"
tracing = "0.1"
cached = { version = "0", features = ["async", "async_tokio_rt_multi_thread"]}