[package]
name = "chrome_server"
version = "0.2.19"
edition = "2021"
authors = [
    "j-mendez <jeff@spider.cloud>"
]
description = "Chrome proxy API to manage chrome in Cloud Providers"
license = "MIT"
repository = "https://github.com/spider-rs/chrome-server"
documentation = "https://docs.rs/chrome_server"
categories = ["web-programming", "command-line-utilities"]

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros", "net"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
lazy_static = "1"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
tracing = "0.1"
cached = { version = "0", features = ["async", "async_tokio_rt_multi_thread"]}