[package]
name = "headless_browser"
version = "0.1.10"
edition = "2021"
authors = [
    "j-mendez <jeff@spider.cloud>"
]
description = "A scalable application for managing headless Chrome instances with proxy and server capabilities."
license = "MIT"
repository = "https://github.com/spider-rs/chrome-server"
documentation = "https://docs.rs/headless_browser"
categories = ["web-programming", "command-line-utilities"]
keywords = ["chrome", "proxy"]

[dependencies]
headless_browser_lib = { version = "0", path = "../headless_browser_lib" }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["background_threads", "background_threads_runtime_support"], optional = true }


[dev-dependencies]
futures-util = "0.3"
spider_chrome = "2"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros", "net", "io-util"] }

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]